--- a/src/assets/scss/global/_subpages.scss
+++ b/src/assets/scss/global/_subpages.scss
@@ -19,7 +19,7 @@
 }
 
 .main_body__content_area {
-  padding: 0rem 20% 2rem 20%;
+  padding: 1rem 20% 2rem 20%;
 }
 
 // Individual subpage code
